--- a/aug30/src/main/resources/templates/clien.html
+++ b/aug30/src/main/resources/templates/clien.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-
 </head>
 <body>
-	<th:block th:insert="~{/menu.html}"></th:block>
-indexhh
+[[${list}]]
 </body>
 </html>
