--- a/aug30/src/main/resources/templates/login.html
+++ b/aug30/src/main/resources/templates/login.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>LOGIN</title>
+<link rel="stylesheet" type="text/css" th:href="@{./css/login.css}">
 </head>
 <body>
-
-
-	<div class="login-form">
-		<form action="./login" method="post">
-			<h3>ID</h3>
-			<input type="text" name="m_id">
-			<h3>PW</h3>
-			<input type="text" name="m_pw">
-			<button>login</button>
-		</form>
+	<!-- <th:block th:insert='~{/menu.html :: menu}'></th:block> -->
+		<th:block th:insert="~{/menu.html}"></th:block>
+	<div style="height: 70px; width: 100%"></div>
+	<div class=wrap>
+		<div class="img_form"></div>
+		<div class="login_form">
+			<h1>LOGIN</h1>
+			<form th:action="@{./login}" th:method="post">
+				<input type="text" name="m_id" id="id" placeholder="ID"required="required"> 
+				<input type="password" name="m_pw" id="pw" placeholder="PW" required="required" maxlength="20">
+				<button class="login">LOGIN</button>
+			</form>
+			<div class="find">
+				<a>아이디 찾기</a> &nbsp; | &nbsp; <a>비밀번호 찾기</a> &nbsp; <span>|</span>
+				&nbsp; <a href="./join">회원가입</a>
+			</div>
+		</div>
 	</div>
+	
 </body>
 </html>
